range-loop: Don't warn if the container doesn't detach

BUG: 367485